[package]
name = "raylib-sys"
version = "0.1.0"
authors = ["Devin Jacobs <dbuttonz@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
bindgen = "0.51.1"
cmake = "0.1.42"
lazy_static = "1.4.0"
regex = "1.3.1"

[dependencies]
